# pizza_factory

./: .gitignore  CMakeLists.txt  DESCRIPTION.md  LICENSE  README.md
.github/workflows/: ci.yml  coverage.yml
docs/: architecture.gv
examples/: CMakeLists.txt
examples/abstract_factory/: chicago_ingredient_factory.hpp  main.cpp  ny_ingredient_factory.hpp  pizza_ingredient_factory.hpp
examples/factory_method/: CMakeLists.txt  benchmark.cpp  chicago_pizza_bacon.hpp  chicago_pizza_cheese.hpp  chicago_pizza_pepperoni.hpp  chicago_pizza_pineapple.hpp  chicago_pizza_store.hpp  chicago_pizza_veggie.hpp  main.cpp  ny_pizza_bacon.hpp  ny_pizza_cheese.hpp  ny_pizza_pepperoni.hpp  ny_pizza_pineapple.hpp  ny_pizza_store.hpp  ny_pizza_veggie.hpp  pizza.hpp
examples/factory_method/ingredient_creators/: ingredient_creators.hpp
include/factory/: concrete_creator.hpp  dynamic_factory.hpp  ingredient_factory_registry.hpp
include/ingredients/: concrete_ingredients.hpp  ingredients.hpp
include/pizza/: pizza_interface.hpp
tests/: CMakeLists.txt  test_abstract_factory.cpp  test_dynamic_factory.cpp  test_factory_method.cpp
